[gd_scene load_steps=7 format=3 uid="uid://i4sw7xlogaxm"]

[ext_resource type="Texture2D" uid="uid://dmvbul5digdpo" path="res://sprites/ui/text light.png" id="1_3seih"]
[ext_resource type="Script" uid="uid://wkq6s0amcrxo" path="res://scenes/ui/big_text_animation.gd" id="1_cc78j"]
[ext_resource type="Texture2D" uid="uid://bxuerlbo6xe3n" path="res://sprites/ui/black_screen.png" id="2_u7cs3"]
[ext_resource type="FontFile" uid="uid://c7eg3ms3bo8qv" path="res://sprites/ui/UncialAntiqua-Regular.ttf" id="4_1orku"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cc78j"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.48
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 194.11
initial_velocity_max = 194.11
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 4.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u7cs3"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(630, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 194.11
initial_velocity_max = 194.11
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0

[node name="BigTextAnimation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cc78j")

[node name="BlackRect" type="TextureProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.31764707)
layout_mode = 0
offset_left = 229.0
offset_top = 150.0
offset_right = 2149.0
offset_bottom = 1230.0
scale = Vector2(0.564, 0.20000061)
step = 0.01
fill_mode = 2
texture_progress = ExtResource("2_u7cs3")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 88.00001
offset_right = 1562.0
offset_bottom = 264.0
scale = Vector2(0.88019514, 0.74791896)
step = 0.01
value = 14.97
texture_progress = ExtResource("1_3seih")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 811.04126
offset_top = 214.63373
offset_right = 1637.0413
offset_bottom = 390.63373
rotation = -3.1415927
scale = Vector2(0.88019514, 0.7479189)
step = 0.01
texture_progress = ExtResource("1_3seih")

[node name="TextureProgressBar3" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 88.00001
offset_right = 1562.0
offset_bottom = 264.0
scale = Vector2(0.88019514, 0.74791896)
step = 0.01
value = 100.0
texture_progress = ExtResource("1_3seih")

[node name="TextureProgressBar4" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 811.04126
offset_top = 214.63373
offset_right = 1637.0413
offset_bottom = 390.63373
rotation = -3.1415927
scale = Vector2(0.88019514, 0.7479189)
step = 0.01
value = 100.0
texture_progress = ExtResource("1_3seih")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(773, 150)
amount = 23
lifetime = 0.13
process_material = SubResource("ParticleProcessMaterial_cc78j")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(773, 150)
amount = 23
lifetime = 0.13
process_material = SubResource("ParticleProcessMaterial_cc78j")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
position = Vector2(773, 151)
emitting = false
amount = 93
lifetime = 0.13
process_material = SubResource("ParticleProcessMaterial_u7cs3")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 250.00002
offset_top = 225.0
offset_right = 1365.0
offset_bottom = 308.0
scale = Vector2(1.2032458, 1.2032458)
theme_override_fonts/font = ExtResource("4_1orku")
theme_override_font_sizes/font_size = 48
text = "DEFEAT 20 WAVES OF ENEMIES"
